@@ -114,6 +114,8 @@ The following plugins are included in the main package:</p>
 
 <li><a href="plugin-qmail-validate.html">qmail-validate</a></li>
 
+<li><a href="plugin-rbl.html">rbl</a></li>
+
 <li><a href="plugin-reject.html">reject</a></li>
 
 <li><a href="plugin-relayclient.html">relayclient</a></li>
