@@ -1,0 +1,24 @@
+<html>
+<body>
+
+<h2><a href="mailfront.html">mailfront</a></h2>
+
+<h1>Plugin: rbl</h1>
+
+<hr />
+
+<p>This plugin looks up the remote IP of the client in a list of RBLs,
+and blocks all messages if it is listed.</p>
+
+<h2>Configuration</h2>
+
+<dl>
+
+<dt><tt>RBL_BLACKLISTS</tt></dt> <dd>The list of RBL domain names to
+search, separated by commas (<tt>,</tt>). If this list is empty, no
+action is taken.</dd>
+
+</dl>
+
+</body>
+</html>
